--- a/devcontainer/devcontainer.json
+++ b/devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
   "name": "ColorizeAnimateApp",
-  "image": "mcr.microsoft.com/devcontainers/python:3.10",
+  "image": "mcr.microsoft.com/devcontainers/python:3.9",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
-  "postCreateCommand": "pip install -r requirements.txt",
+  "postCreateCommand": "apt-get update && apt-get install -y libgl1 && pip install -r requirements.txt",
   "customizations": {
     "vscode": {
       "settings": {},
